; ModuleID = '/home/carl/AnghaBench/freebsd/stand/uboot/lib/extr_devicename.c_uboot_fmtdev.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/uboot/lib/extr_devicename.c_uboot_fmtdev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uboot_devdesc = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__*, i32 }
%struct.TYPE_3__ = type { i32, i8* }

@uboot_fmtdev.buf = internal global [128 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [12 x i8] c"(no device)\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"%s%d:\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @uboot_fmtdev(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.uboot_devdesc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.uboot_devdesc*
  store %struct.uboot_devdesc* %5, %struct.uboot_devdesc** %3, align 8
  %6 = load %struct.uboot_devdesc*, %struct.uboot_devdesc** %3, align 8
  %7 = getelementptr inbounds %struct.uboot_devdesc, %struct.uboot_devdesc* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  switch i32 %11, label %26 [
    i32 128, label %12
    i32 130, label %14
    i32 129, label %14
  ]

12:                                               ; preds = %1
  %13 = call i32 @strcpy(i8* getelementptr inbounds ([128 x i8], [128 x i8]* @uboot_fmtdev.buf, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %26

14:                                               ; preds = %1, %1
  %15 = load %struct.uboot_devdesc*, %struct.uboot_devdesc** %3, align 8
  %16 = getelementptr inbounds %struct.uboot_devdesc, %struct.uboot_devdesc* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i8*, i8** %19, align 8
  %21 = load %struct.uboot_devdesc*, %struct.uboot_devdesc** %3, align 8
  %22 = getelementptr inbounds %struct.uboot_devdesc, %struct.uboot_devdesc* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @sprintf(i8* getelementptr inbounds ([128 x i8], [128 x i8]* @uboot_fmtdev.buf, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* %20, i32 %24)
  br label %26

26:                                               ; preds = %1, %14, %12
  ret i8* getelementptr inbounds ([128 x i8], [128 x i8]* @uboot_fmtdev.buf, i64 0, i64 0)
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
